# hadley

./: LICENSE  Makefile  README.md  bash.sh  build.sh  default.nix  generate.sh  ghci.sh  hadley.cabal  nginx.sh  release.nix  run-image.sh  run.sh  shell.nix  typecheck.sh
.halcyon/: constraints
.halcyon-ghc-7.6.3/: constraints
.halcyon-ghc-7.8.4/: constraints
_static/: style.css
images/hadley/: Dockerfile
images/stack-pandoc/: Dockerfile
sites-enabled/: hadley.noteed.com
