name:                hadley
version:             0.0.0
Cabal-Version:       >= 1.8
synopsis:            Hadley renders static pages for Haskell projects.
description:         Hadley renders static pages for Haskell projects.
category:            System
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple

executable hadley
  hs-source-dirs:      bin
  main-is:             hadley.hs
  build-depends:       cmdargs == 0.10.*,
                       base == 4.*,
                       blaze-html == 0.5.*,
                       data-default == 0.5.*,
                       directory == 1.1.*,
                       filepath == 1.3.*,
                       haskell-src-exts == 1.16.*,
                       hlint == 1.9.*,
                       pandoc == 1.12.*,
                       process == 1.1.*,
                       text == 0.11.*
  ghc-options:         -Wall
                       -fno-warn-unused-do-bind
