name:                hadley
version:             0.0.0
Cabal-Version:       >= 1.8
synopsis:            Hadley renders static pages for Haskell projects.
description:         Hadley renders static pages for Haskell projects.
category:            System
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple

data-files:            static/css/style.css

executable hadley
  hs-source-dirs:      bin
  main-is:             hadley.hs
  build-depends:       cmdargs,
                       base == 4.*,
                       blaze-html,
                       data-default,
                       directory,
                       filepath,
                       ghc-lib-parser,
                       hlint,
                       pandoc,
                       process,
                       text
  ghc-options:         -Wall
                       -fno-warn-unused-do-bind
